# druid

druid-shell/: Cargo.toml
druid-shell/src/: lib.rs
druid-shell/src/macos/: dialog.rs  menu.rs  paint.rs  util.rs  win_main.rs  window.rs
druid-shell/src/windows/: window.rs
examples/: anim.rs
piet/src/: lib.rs
piet/src/macos/: brush.rs  math.rs  render_target.rs  stroke_style.rs  write.rs
piet/src/windows/: brush.rs  render_target.rs  write.rs
